--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-firebase-hooks": "^5.1.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
